# Laabh

./: .gitignore  CLAUDE-PHASE-FNO.md  CLAUDE-PHASE2.md  CLAUDE-PHASE3.md  CLAUDE-PHASE4.md  CLAUDE.md  Makefile  README.md  alembic.ini  oss-integrations.diff  pyproject.toml  requirements.txt
.dashboard_logs/: jobs.json
apps/: __init__.py  _inspector_renderers.py  backtest_dashboard.py  decision_inspector.py
data/: rbi_repo.csv
database/: nse_holidays.json.example  schema.sql  seed.sql  seed_sectors.sql
database/migrations/: 2026_05_05_strategy_decisions.sql  2026_05_10_backtest_signal_log.sql  2026_05_10_signal_log_traces.sql  2026_05_13_vrp_engine.sql  2026_05_15_llm_features.sql  env.py
docker/: .env.docker  docker-compose.dev.yml  docker-compose.yml
docker/backend/: Dockerfile  entrypoint.sh
docker/nginx/: Dockerfile  (+1 more)
docs/: agentic_workflow_plan.md  desktop_app_spec.md  dryrun.md  dryrun_runbook.md  fno_investigation_guide.md  fno_runbook.md  quant_backtest_runbook.md  runday.md  windows_service.md
frontend/: README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
mobile/: App.tsx  app.json  package.json
requirements/: oss-integrations.txt
scripts/: _phase_breakdown_today.py  analyst_pack.py  backfill_llm_features.py  backfill_price_daily_changes.py  backfill_prices.py  backfill_sectors.py  backfill_today_close_links.py  backfill_vix_ticks.py  backtest_agentic.py  backtest_compare_to_paper.py  backtest_report.py  backtest_run.py  backtest_run_and_report.py  bootstrap_fno_universe.py  calibrate_regime.py  ensure_historical_prereqs.py  fno_smoke_run.py  init_db.sh  install_service.ps1  missed_trades.py  probe_agent_tools.py  promote_bootstrap_calibration.py  quant_replay_backtest.py  quant_smoke_run.py  reattribute_outcome_z_intraday.py  replay_new_modules.py  replay_workflow_run.py  revert_strategy_decision.py  seed_analysts_from_signals.py  seed_runday_essentials.py  test_angel_one.py  test_dhan_totp.py  test_equity_strategy.py  uninstall_service.ps1  validate_feature_store_replay.py  weekly_postmortem.py
src/: __init__.py  config.py  db.py  main.py  scheduler.py  scheduler_reconciler.py
tests/: conftest.py  context.md  test_apps_decision_inspector.py  test_apps_inspector_renderers.py  test_backfill_batch.py  test_backtest_aux_loaders.py  test_backtest_clock.py  test_backtest_feature_store.py  test_backtest_runner.py  test_backtest_schema.py  test_calibration_weight.py  test_chain_collector_as_of.py  test_chain_synthesizer.py  test_collectors.py  test_compare_modes.py  test_config_quant.py  test_convergence.py  test_dhan_historical_loader.py  test_dhan_token.py  test_dryrun_bhavcopy.py  test_dryrun_dhan_historical.py  test_dryrun_orchestrator.py  test_dryrun_schema.py  test_dryrun_timestamps.py  test_equity_trading_flag.py  test_extraction.py  test_feature_pipeline.py  test_fii_dii.py  test_fii_dii_archive.py  test_fno_api.py  test_fno_api_endpoints.py  test_fno_ban_list.py  test_fno_calendar.py  test_fno_chain.py  test_fno_chain_collector.py  test_fno_chain_dhan.py  test_fno_chain_failover.py  test_fno_chain_nse.py  test_fno_e2e.py  test_fno_execution.py  (+84 more)
(+412 files in other folders)
