[project]
name = "laabh"
version = "0.1.0"
description = "Personal paper trading system for Indian stock markets — Phase 1: data collection backbone"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "smartapi-python>=1.5.0",
    "pyotp>=2.9.0",
    "yfinance>=0.2.40",
    "feedparser>=6.0.11",
    "playwright>=1.46.0",
    "anthropic>=0.34.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.2",
    "apscheduler>=3.10.4",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "simhash>=2.1.2",
    "loguru>=0.7.2",
    "tenacity>=9.0.0",
    "pytz>=2024.1",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
