[project]
name = "laabh"
version = "0.1.0"
description = "Personal paper trading system for Indian stock markets — Phases 1-4"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "typer[all]>=0.12.0",
    "smartapi-python>=1.5.0",
    "pyotp>=2.9.0",
    "yfinance>=0.2.40",
    "feedparser>=6.0.11",
    "playwright>=1.46.0",
    "anthropic>=0.34.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.2",
    "apscheduler>=3.10.4",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "simhash>=2.1.2",
    "loguru>=0.7.2",
    "tenacity>=9.0.0",
    "pytz>=2024.1",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "psycopg2-binary>=2.9.9",
    # Phase 2: Trading engine + API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.37.0",
    "numpy>=1.26.0",
    # Phase 3: Whisper pipeline
    "openai-whisper>=20231117",
    "yt-dlp>=2024.1.0",
    "youtube-transcript-api>=0.6.2",
    "openai>=1.30.0",
    "pyarrow>=24.0.0",
    "streamlit>=1.40.0",
    # Decision Inspector (apps/decision_inspector.py) needs interactive
    # charts with click-to-focus — Streamlit's native charts don't support
    # selection events at the granularity we need.
    "plotly>=5.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
laabh-runday = "src.runday.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]
